Tue Oct  7 16:27:34 1997  Manfred Hollstein  <manfred@s-direktnet.de>

	* aclocal.m4: Substitute INSTALL.
	* configure: Re-built.

Tue Oct  7 10:25:22 1997  Manfred Hollstein  (manfred@lts.sel.alcatel.de)

	* info/man.c (SIGCHLD): Define to SIGCLD if <sys/signal.h>
	fails to provide it.

Wed Sep 17 23:56:11 1997  Jeffrey A Law  (law@cygnus.com)

	* util/install-info.c: Only provide an external decl for strrchr
	if HAVE_STRCHR is not defined.

Mon Sep 15 22:53:01 1997  Jeffrey A Law  (law@cygnus.com)

	* aclocal.m4: Add replacement for AC_PROG_INSTALL.
	* configure.in: Use EGCS_PROG_INSTALL.

Tue Sep  9 23:16:35 1997  H.J. Lu  (hjl@gnu.ai.mit.edu)

	* Makefile (all): Remove sub-all.
	(stmp-sub-all): New target. Renamed from sub-all.
	(info, texinfo): Also depend on stmp-sub-all.
	(clean): Also remove stmp*.
	(maintainer-clean): New target. Same as realclean.

Fri Sep  5 09:07:33 1997  Jeffrey A Law  (law@cygnus.com)

	* install-sh: Delete duplicate install script.

Tue Sep  2 22:25:34 1997  Jeffrey A Law  (law@cygnus.com)

	* Makefile.in (install, install-info, installdirs, uninstall): Make
	these phony targets.

Tue Sep  2 10:19:48 1997  Richard Henderson  <rth@cygnus.com>

	* makeinfo/makeinfo.c: Maybe include <stdlib.h> for malloc et al.
	* util/install-info.c: Include <string*.h>.
	(my_strerror): Use strerror if available.

Tue Aug 26 11:18:52 1997  Jeffrey A Law  (law@cygnus.com)

	* libtxi/Makefile.in: Add dependencies for memcpy, memmove and strdup.

Mon Jul 28 17:26:48 1997  Rob Savoye  <rob@chinadoll.cygnus.com>

	* aclocal.m4: Add CYGWIN and EXEEXT autoconf macros.
        * configure.in: Use CYGWIN and EXEEXT autoconf macro to look for
        win32 dependencies.
        * configure: Regenerated with autoconf 2.12.
        * Makefile.in: Add $(EXEEXT) to all executables.
        * makeinfo/Makefile.in: Add $(EXEEXT) to all executables.
        * util/Makefile.in: Add $(EXEEXT) to all executables.
